--- a/pics/templates/base.html
+++ b/pics/templates/base.html
@@ -5,7 +5,7 @@
 	<title>Pics ART</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
 	<div id="colorlib-page">
@@ -41,7 +41,7 @@
 		{% block content %}
 		{%endblock%}
 	</div>
-	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
 	<script type="text/javascript">
 		function copyToClipboard(element) {
 			var copyUrl = document.getElementById(element)
